@@ -313,7 +313,7 @@ SHOWDAMAGE=NO
 # Include SKILL-PROFICIENCY to show words instead of skill proficiency numbers
 # Include STAT-PROFICIENCY to show words instead of char stat numbers
 # Set the value to NONE to include none of the options above.
-# Set the value to BLANK to default to ARMOR-ABSOLUTE, ARMOR-NUMBER, 
+# Set the value to blank to default to ARMOR-ABSOLUTE, ARMOR-NUMBER, 
 #    COMBAT-ABSOLUTE, COMBAT-NUMBER
 # Default is blank
 PROWESSOPTIONS=
@@ -689,7 +689,7 @@ THIRST=1000,100,100
 # The optional Zappermask then describes who must be in the same room; 
 # see AHELP ZAPPERMASK for more info.  Unlike most static zappermasks,
 # this one may contain variables from the player enclosed in braces {},
-# such as {RACE} {CHARCLASS} {LEVEL}, etc.
+# such as {RACE} {CHARCLASS} {LEVEL}, etc.  See also DISABLE SHOWXP.
 # Example: 6 200% SAY(Give me XP!) -EFFECTS +MOBTeacher -ANYCLASS +{CHARCLASS}
 # An empty value (default) is normal
 EXPDEFER=
@@ -1726,20 +1726,14 @@ ACCMSGS=OFF
 # Disable the subsystem that prevents numerous mud connections from the
 # same ip address in a short timespan.
 # 
-# HUNGER
-# Disables the tendency for players to get hungry over time.
-#
-# THIRST
-# Disables the tendency for players to get thirsty over time.
+# HUNGER, THIRST
+# Disables the tendency for players to get hungry and/or thirsty over time.
 #
 # LOGOUTS
 # Disables the removal of characters from the game world on logout.
 #
-# QUITREASON
-# Disables the prompt for a reason for quitting after new char creation.
-#
-# RETIREREASON
-# Disables the prompt for a reason for retiring a character.
+# QUITREASON, RETIREREASON
+# Disables the prompt for a reason for quitting a new character, or retiring.
 #
 # ROOMVISITS
 # Disables the systems ability to remember every room a player visits for
@@ -1774,17 +1768,13 @@ ACCMSGS=OFF
 # AUTODISEASE
 # Disables most of the engine's automatic disease-catching.
 #
-# AUTOPURGE
-# Disables the player purging system
+# DARKNIGHTS, DARKWEATHER
+# Disables the making of all outdoor rooms dark when night falls, or 
+# the making of all outdoor rooms dark during blizzards and duststorms
 #
-# DARKNIGHTS
-# Disables the making of all outdoor rooms dark when night falls.
-#
-# DARKWEATHER
-# Disables the making of all outdoor rooms dark during blizzards and duststorms
-#
-# PURGEACCOUNTS
-# Disables the auto-deletion of accounts when characters are purged or expired.
+# AUTOPURGE, PURGEACCOUNTS
+# Disables the player purging system, and/or the auto-deletion of 
+# accounts when characters are purged or expired.
 #
 # EQUIPSIZE
 # Disables the equipment sizing system in the game. 
@@ -1796,6 +1786,9 @@ ACCMSGS=OFF
 #
 # TECHLEVEL
 # Disables the tech-item-level system
+#
+# SHOWXP
+# Disables the ability to see how much experience a player has earned.
 #
 # AUTOLANGUAGE
 # Disables the system whereby players attempt to speak the language of the
