@@ -54,6 +54,7 @@
   52. Prop_ItemSlot now supports LEVEL argument to affect the level of the item.
   53. Can now ignore an account, which seems obvious when I think about it.
   54. Most crafting expertises split-up and made more expensive -- backward comp.
+  55. Can now disable showing experience in Score and in the Prompt using DISABLE cmd.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
